--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -5,6 +5,8 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:a4j="http://richfaces.org/a4j"> 
 
+<f:view encoding="ISO-8859-1" contentType="text/html" >
+
 <h:head>
 	<title> JSF Index </title>
 </h:head> 
@@ -32,4 +34,6 @@
 	
 	</h:form>
 </body> 
+
+</f:view>
 </html>
