renderizando componentes atraves do managedBean

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -31,6 +31,10 @@
 		<br/>
 		<h:commandLink action="#{controlePrincipal.geraLogin()}" 
 					   value="Login " />
+					   
+		<br/>
+		<h:commandLink action="formPessoa" 
+					   value="Cadastro " />
 	
 	</h:form>
 </body> 
