formulario com urls get's

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -35,6 +35,10 @@
 		<br/>
 		<h:commandLink action="formPessoa" 
 					   value="Cadastro " />
+					   
+		<br/>
+		<h:commandLink action="formBonus" 
+					   value="Calculo de Bonus " />
 	
 	</h:form>
 </body> 
