--- a/WebContent/formConversores.xhtml
+++ b/WebContent/formConversores.xhtml
@@ -19,10 +19,15 @@
 				<f:converter converterId="converterCalendar"/>
 			</h:inputText>
 			
+			<h:outputLabel value="Cidade"/>
+			<h:selectOneMenu value="#{controleAulaConversores.cidade}" 
+							 converter="#{controleAulaConversores.converterCidade}">
+				<f:selectItems value="#{controleAulaConversores.listaCidades}"/>				 
+			</h:selectOneMenu>
+			
 			<f:facet name="footer">
 				<h:commandButton action="#{controleAulaConversores.lerDados()}" 
 								 value="Enviar" />
-			
 			</f:facet>
 		
 		</h:panelGrid>
