parte ajax revista e resolvida

--- a/WebContent/crudAjax.xhtml
+++ b/WebContent/crudAjax.xhtml
@@ -71,7 +71,7 @@
 								</h:commandButton>
 								
 								<h:commandButton action="#{controleCRUDAjax.salvar()}" 
-												 value="Salvar" immediate="true">
+												 value="Salvar">
 									
 									<f:ajax execute="@form" render="@form"/>
 								</h:commandButton>
